parser/src/lexer/snapshots/parser__lexer__lexer__tests__string-literals-1.snap
---
source: parser/src/lexer/lexer.rs
description: "\"world\""
---
[
    Token {
        kind: StringLiteral,
        value: Str(
            "\"world\"",
        ),
        start: 0,
        end: 7,
    },
]
