parser/src/lexer/snapshots/parser__lexer__lexer__tests__test-lexer-25.snap
---
source: parser/src/lexer/lexer.rs
description: "@="
---
[
    Token {
        kind: MatrixMulAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
