parser/src/lexer/snapshots/parser__lexer__lexer__tests__test-lexer-32.snap
---
source: parser/src/lexer/lexer.rs
description: "**="
---
[
    Token {
        kind: PowAssign,
        value: None,
        start: 0,
        end: 3,
    },
]
